<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>ch.admin.bj.swiyu</groupId>
    <artifactId>swiyu-generic-application-test</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>test-wallet-application</module>
        <module>test-wallet-library</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <properties>
        <java.version>25</java.version>
        <!-- Dependency Versions -->
        <gson.version>2.14.0</gson.version>
        <nimbus-jose-jwt.version>10.9.1</nimbus-jose-jwt.version>
        <testcontainers.version>1.21.4</testcontainers.version>
        <jackson-databind-nullable.version>0.2.11</jackson-databind-nullable.version>
        <bitcoinj-core.version>0.17.1</bitcoinj-core.version>
        <java-json-canonicalization.version>1.1</java-json-canonicalization.version>
        <bouncycastle.version>1.85</bouncycastle.version>
        <mockserver.version>7.6.0</mockserver.version>
        <postgresql.version>42.7.13</postgresql.version>
        <xray-junit.version>1.0.1</xray-junit.version>
        <generic-java-lib.version>3.0.0</generic-java-lib.version>
        <pact.version>4.7.5</pact.version>
        <!-- Plugin Versions -->
        <openapi-generator-maven-plugin.version>7.25.0</openapi-generator-maven-plugin.version>
        <maven-jar-plugin.version>3.5.1</maven-jar-plugin.version>
        <maven-failsafe-plugin.version>3.6.0</maven-failsafe-plugin.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- swiyu Generic Lib -->
            <dependency>
                <groupId>ch.admin.swiyu</groupId>
                <artifactId>swiyu-generic-java-all</artifactId>
                <version>${generic-java-lib.version}</version>
            </dependency>
            <!-- Gson -->
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <!-- Nimbus JOSE JWT -->
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus-jose-jwt.version}</version>
            </dependency>
            <!-- Test Containers -->
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>postgresql</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>mockserver</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
            <!-- OpenAPI Tools -->
            <dependency>
                <groupId>org.openapitools</groupId>
                <artifactId>jackson-databind-nullable</artifactId>
                <version>${jackson-databind-nullable.version}</version>
            </dependency>
            <!-- Multibase -->
            <dependency>
                <groupId>org.bitcoinj</groupId>
                <artifactId>bitcoinj-core</artifactId>
                <version>${bitcoinj-core.version}</version>
            </dependency>
            <!-- JSON Canonicalization -->
            <dependency>
                <groupId>io.github.erdtman</groupId>
                <artifactId>java-json-canonicalization</artifactId>
                <version>${java-json-canonicalization.version}</version>
            </dependency>
            <!-- Bouncy Castle -->
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcprov-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcpkix-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>
            <!-- Mock Server -->
            <dependency>
                <groupId>org.mock-server</groupId>
                <artifactId>mockserver-netty</artifactId>
                <version>${mockserver.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mock-server</groupId>
                <artifactId>mockserver-client-java</artifactId>
                <version>${mockserver.version}</version>
            </dependency>
            <!-- PostgreSQL Driver -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>
            <!-- Xray JUnit Extensions -->
            <dependency>
                <groupId>app.getxray</groupId>
                <artifactId>xray-junit-extensions</artifactId>
                <version>${xray-junit.version}</version>
            </dependency>
            <!-- Pact consumer tests -->
            <dependency>
                <groupId>au.com.dius.pact.consumer</groupId>
                <artifactId>junit5</artifactId>
                <version>${pact.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Annotation Processing -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <!-- OpenAPI Generator Plugin -->
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                </plugin>
                <!-- Jar Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <!-- Failsafe Plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludedGroups>version_regression</excludedGroups>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>version-regression</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration combine.self="override">
                            <groups>version_regression</groups>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
